Actualizacion de codigo de estructura

--- a/index.html
+++ b/index.html
@@ -13,31 +13,22 @@
                 <h1>MiniMarket.com</h1>
             </div>
             <div class="col-md-4">
-                <br><br>
-                <center><a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a></center>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="barra">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <center><a href="index.html" id="vistas">Inicio</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="ropa.html" id="vistas">Ropa</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center> <a href="accesorios.html" id="vistas">Accesorios</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="carrito.html" id="vistas">Carrito de Compras</a></center>
-                        </div>
-                    </div>
+                <div class="inicioSesion">
+                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
                 </div>
             </div>
-        </div><br>
+        </div> 
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="barra">
+                    <a href="index.html" id="vistas">Inicio</a>    
+                    <a href="ropa.html" id="vistas">Ropa</a>
+                    <a href="accesorios.html" id="vistas">Accesorios</a>
+                    <a href="carrito.html" id="vistas">Carrito de Compras</a>
+                 </div>
+            </div>
+        </div>
 
 
 
@@ -67,7 +58,7 @@
                   </div>
             </div>
         </div>
-        <br><br>
+
 
         <!--titulo-->
         <div class="row">
@@ -75,144 +66,132 @@
                 <h5>Tendencia deportiva</h5>
             </div>
         </div>
-        <br><br>
+
 
 
         <!--targeticas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/tendenciaI.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Crossfit</h5>
                         <p class="card-text">Consiste en la ejecución de un circuito de ejercicios de
                              potencia, de habilidad y aeróbicos que te permitirán desarrollar tu condición 
                              atlética de una manera rápida y eficiente.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/tendenciaII.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">fly yoga</h5>
                         <p class="card-text">Acelera nuestro metabolismo para aumentar el consumo de calorías.
                              Se alternan momentos de reposo con auténticas piruetas en el aire.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/tendenciaIII.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Barra</h5>
                         <p class="card-text">Puedes tonificar los musculos, haciendo movimientos sencillos.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
-        </div><br><br>
+        </div>
         <!--titulo-->
         <div class="row">
             <div class="col-md-12">
                 <h5>Nuevos deportes</h5>
             </div>
-        </div><br><br>
+        </div>
         <!--targetas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/nuevodeporte.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Aqua boxing</h5>
                         <p class="card-text">Consiste en hacer todos los movimientos del boxeo dentro del
                              agua. La resistencia del agua permite contornear brazos y piernas.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/barra.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Barra Americana</h5>
                         <p class="card-text">Ejercicio donde se ejercitan casi todos los grupos musculares, 
                             tonificando también la piel y mejorando la flexibilidad y la fuerza en brazos y piernas.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/esparta.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Carrera Espartana</h5>
                         <p class="card-text">Es una carrera de 5, 13 ó 21 kilómetros repletos de obstáculos
                              de diferente índole. Toda una experiencia para vivir y disfrutar.</p>
-                        <a href="#" class="btn btn-primary">Detalles</a>
                     </div>
                 </div>
             </div>
-        </div><br><br>
+        </div>
 
         <!--titulo-->
         <div class="row">
             <div class="col-md-12">
                 <h5>Nuevos productos</h5>
             </div>
-        </div><br><br>
+        </div>
 
         <!--targeticas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/manillas.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Manilla</h5>
                         <p class="card-text">-Puedes conectarla con aplicaciones de tu smartphone.<br>
-                                            -Diferentes colores.<br>
-                                            -$ 100000 
+                                            -Diferentes colores.
                         </p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 ">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/balones.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Balones</h5>
                         <p class="card-text">-Balones de alta calidad 100% originales.<br>
                                             -Diferentes colores.<br>
-                                            -incluye mochila para guardar.<br>
-                                            -$ 150000.
+                                            -incluye mochila para guardar.
                         </p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/kit.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Kit</h5>
                         <p class="card-text">-Nuevo kit deportivo limitado.<br>
                                             -Especial para deportistas.<br>
-                                            -Precio muy economico.<br>
-                                            -$ 150000 </p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                                            -Precio muy economico. </p>
                     </div>
                 </div>
             </div>
-        </div><br><br><br>
+        </div>
 
         <!--banner-->
         <center>
