--- a/ropa.html
+++ b/ropa.html
@@ -13,65 +13,53 @@
                 <h1>MiniMarket.com</h1>
             </div>
             <div class="col-md-4">
-                <br><br>
-                <center><a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a></center>
+                <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
             </div>
-
         </div>
 
         <!--barra-->
         <div class="row">
             <div class="col-md-12">
-                <div id="barra">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <center><a href="index.html" id="vistas">Inicio</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="ropa.html" id="vistas">Ropa</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center> <a href="accesorios.html" id="vistas">Accesorios</a></center>
-                        </div>
-                        <div class="col-md-3">
-                            <center><a href="carrito.html" id="vistas">Carrito de Compras</a></center>
-                        </div>
-                    </div>
+                <div class="barra">
+                            <a href="index.html" id="vistas">Inicio</a>
+                           <a href="ropa.html" id="vistas">Ropa</a>
+                            <a href="accesorios.html" id="vistas">Accesorios</a>
+                            <a href="carrito.html" id="vistas">Carrito de Compras</a>
                 </div>
             </div>
-        </div><br>
+        </div>
 
         <!--Titulo de la seccion-->
 
         <div class="row">
             <div class="col-md-12">
-                <center>
-                    <h2>Ropa Deportiva para toda la familia</h2><br><br>
+                <div class="introduccion">
+                    <h2>Ropa Deportiva para toda la familia</h2>
                     <p>Disfruta de toda la variedad de ropa deportiva que encuentras aqui.
                         Encontraras los detalles de cada prenda, si la quieres adquirir da click en el boton comprar
                         para agregarlo en tu lista en el carrito de compras.
                         Recuerda que para comprar debes primero iniciar sesion.
                     </p>
-                </center>
+                </div>
             </div>
-        </div><br><br>
+        </div>
 
         <!--titulo-->
         <div class="row">
                 <div class="col-md-12">
                     <h5>Ropa para dama</h5>
                 </div>
-            </div><br><br>
+            </div>
 
         <!--targeticas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/blusa.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Blusa</h5>
-                        <p class="card-text">-Blusa negra talla unica.<br>
-                                            -Original nike.<br>
+                        <p class="card-text">-Blusa negra talla unica.
+                                            -Original nike.
                                             -$ 150000.
                         </p>
                         <a href="#" class="btn btn-primary">Comprar</a>
@@ -80,12 +68,12 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/conjuntos.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Conjunto</h5>
-                        <p class="card-text">-Chaqueta y pantalon.<br>
-                                            -Impermeable.<br>
+                        <p class="card-text">-Chaqueta y pantalon.
+                                            -Impermeable.
                                             -$ 80000</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
@@ -93,18 +81,18 @@
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/top.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Top y leguis</h5>
-                        <p class="card-text">-Diferentes tallas.<br>
-                                            -En tres colores<br>
+                        <p class="card-text">-Diferentes tallas.
+                                            -En tres colores.
                                             -$ 50000</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-        </div><br><br>
+        </div>
 
 
         <!--titulo-->
@@ -112,18 +100,18 @@
             <div class="col-md-12">
                 <h5>Ropa para caballero</h5>
             </div>
-        </div><br><br>
+        </div>
 
 
         <!--targetas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/a.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Sudadera</h5>
-                        <p class="card-text">-Talla unica<br>
-                                            -Negra y gris.<br>
+                        <p class="card-text">-Talla unica
+                                            -Negra y gris.
                                             -$ 45000.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
@@ -131,12 +119,12 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/b.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Buso</h5>
-                        <p class="card-text">-Original de nike.<br>
-                                            -Unico color<br>
+                        <p class="card-text">-Original de nike.
+                                            -Unico color.
                                             -$50000.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
@@ -144,35 +132,35 @@
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/c.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Conjunto</h5>
-                        <p class="card-text">-Camisa y pantalon.<br>
-                                            -Colección limitada.<br>
+                        <p class="card-text">-Camisa y pantalon.
+                                            -Colección limitada.
                                             -$ 80000.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-        </div><br><br>
+        </div>
 
         <!--titulo-->
         <div class="row">
             <div class="col-md-12">
                 <h5>Ropa para niños y niñas</h5>
             </div>
-        </div><br><br>
+        </div>
 
         <!--targeticas-->
         <div class="row">
             <div class="col-md-4 offset-1">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoI.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Conjunto Bascket</h5>
-                        <p class="card-text">-Conjunto para niño y niña.<br>
-                                            -Especial para bascket.<br>
+                        <p class="card-text">-Conjunto para niño y niña.
+                                            -Especial para bascket.
                                             -$ 40000.
                         </p>
                         <a href="#" class="btn btn-primary">Comprar</a>
@@ -181,12 +169,12 @@
             </div>
 
             <div class="col-md-4 ">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoII.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Conjunto football</h5>
-                        <p class="card-text">-Conjunto  para niños<br>
-                                            -Especial para football.<br>
+                        <p class="card-text">-Conjunto  para niños.
+                                            -Especial para football.
                                             -$ 40000.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
@@ -194,18 +182,18 @@
             </div>
 
             <div class="col-md-3">
-                <div class="card" style="width: 15rem;">
+                <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoIII.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Conjunto shick</h5>
-                        <p class="card-text">-Para niño y niña<br>
-                                            -Unicos colores<br>
+                        <p class="card-text">-Para niño y niña.
+                                            -Unicos colores.
                                             -$ 60000.</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-        </div><br><br><br>
+        </div>
 
         <!--banner-->
         <center>
