Modificacion codigo de estructura

--- a/ropa.html
+++ b/ropa.html
@@ -13,7 +13,9 @@
                 <h1>MiniMarket.com</h1>
             </div>
             <div class="col-md-4">
-                <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+                <div class="inicioSesion">
+                    <a href="iniciarSesion.html" id="inicio">Iniciar Sesion</a>
+                </div>
             </div>
         </div>
 
@@ -53,7 +55,7 @@
 
         <!--targeticas-->
         <div class="row">
-            <div class="col-md-4 offset-1">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/blusa.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -62,7 +64,7 @@
                                             -Original nike.
                                             -$ 150000.
                         </p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
@@ -75,12 +77,12 @@
                         <p class="card-text">-Chaqueta y pantalon.
                                             -Impermeable.
                                             -$ 80000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/top.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -88,7 +90,7 @@
                         <p class="card-text">-Diferentes tallas.
                                             -En tres colores.
                                             -$ 50000</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
@@ -105,7 +107,7 @@
 
         <!--targetas-->
         <div class="row">
-            <div class="col-md-4 offset-1">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/a.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -113,7 +115,7 @@
                         <p class="card-text">-Talla unica
                                             -Negra y gris.
                                             -$ 45000.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
@@ -126,12 +128,12 @@
                         <p class="card-text">-Original de nike.
                                             -Unico color.
                                             -$50000.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/c.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -139,7 +141,7 @@
                         <p class="card-text">-Camisa y pantalon.
                                             -Colección limitada.
                                             -$ 80000.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                       <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
@@ -154,7 +156,7 @@
 
         <!--targeticas-->
         <div class="row">
-            <div class="col-md-4 offset-1">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoI.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -163,12 +165,12 @@
                                             -Especial para bascket.
                                             -$ 40000.
                         </p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-4 ">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoII.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -176,12 +178,12 @@
                         <p class="card-text">-Conjunto  para niños.
                                             -Especial para football.
                                             -$ 40000.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="card">
                     <img class="card-img-top" src="vista/imagenes/ninoIII.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -189,7 +191,7 @@
                         <p class="card-text">-Para niño y niña.
                                             -Unicos colores.
                                             -$ 60000.</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <button type="submit">Comprar</button>
                     </div>
                 </div>
             </div>
